{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 151,
  "lineage": "e803acc3-5dc0-2d1b-336e-2e4bac3a05fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "es-app-master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0758470213bdd23b1",
            "arn": "arn:aws:ec2:us-east-1:381406420289:instance/i-0908aa3f420ab2598",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0908aa3f420ab2598",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "terraform_test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-092e83076735a1712",
            "private_dns": "ip-172-16-10-30.ec2.internal",
            "private_ip": "172.16.10.30",
            "public_ip": "52.90.111.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-002431ab590e97093",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022e181c106334aa6",
            "tags": {
              "Cluster": "app",
              "Name": "es-app-master-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065d667fa66371e66"
            ]
          },
          "depends_on": [
            "aws_key_pair.aws_keypair",
            "aws_security_group.server_sg",
            "aws_subnet.subnet",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0758470213bdd23b1",
            "arn": "arn:aws:ec2:us-east-1:381406420289:instance/i-0554cb4b621d0e323",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0554cb4b621d0e323",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "terraform_test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a1473e7da47328b9",
            "private_dns": "ip-172-16-10-51.ec2.internal",
            "private_ip": "172.16.10.51",
            "public_ip": "3.86.193.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a96244234cdf8684",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022e181c106334aa6",
            "tags": {
              "Cluster": "app",
              "Name": "es-app-master-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065d667fa66371e66"
            ]
          },
          "depends_on": [
            "aws_key_pair.aws_keypair",
            "aws_security_group.server_sg",
            "aws_subnet.subnet",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0758470213bdd23b1",
            "arn": "arn:aws:ec2:us-east-1:381406420289:instance/i-017933e88afd59ca6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017933e88afd59ca6",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "terraform_test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08ee8f9c423034f0f",
            "private_dns": "ip-172-16-10-170.ec2.internal",
            "private_ip": "172.16.10.170",
            "public_ip": "54.173.90.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-092f49686d1badf44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022e181c106334aa6",
            "tags": {
              "Cluster": "app",
              "Name": "es-app-master-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-065d667fa66371e66"
            ]
          },
          "depends_on": [
            "aws_key_pair.aws_keypair",
            "aws_security_group.server_sg",
            "aws_subnet.subnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381406420289:internet-gateway/igw-05f4b985ed216e603",
            "id": "igw-05f4b985ed216e603",
            "owner_id": "381406420289",
            "tags": {
              "Name": "Internet gateway for C10K"
            },
            "vpc_id": "vpc-058bdaf3854e89642"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03418bdc72625f93b",
            "owner_id": "381406420289",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f4b985ed216e603",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "C10K route table"
            },
            "vpc_id": "vpc-058bdaf3854e89642"
          },
          "depends_on": [
            "aws_internet_gateway.terraform_gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae4452ce4fce2db7",
            "route_table_id": "rtb-03418bdc72625f93b",
            "subnet_id": "subnet-022e181c106334aa6"
          },
          "depends_on": [
            "aws_route_table.route_table",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381406420289:security-group/sg-065d667fa66371e66",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065d667fa66371e66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access for provisioning",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access to ES servers",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access to ES servers",
                "from_port": 9300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              }
            ],
            "name": "terraform-20200818171933524900000001",
            "name_prefix": null,
            "owner_id": "381406420289",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-058bdaf3854e89642"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381406420289:subnet/subnet-022e181c106334aa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-022e181c106334aa6",
            "map_public_ip_on_launch": false,
            "owner_id": "381406420289",
            "tags": {
              "Name": "terraform_test_subnet"
            },
            "vpc_id": "vpc-058bdaf3854e89642"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381406420289:vpc/vpc-058bdaf3854e89642",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.10.0/24",
            "default_network_acl_id": "acl-0bf826a7c074dc8fb",
            "default_route_table_id": "rtb-0de23005e4b65de00",
            "default_security_group_id": "sg-040a521e1448e71cd",
            "dhcp_options_id": "dopt-71b8ba0a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-058bdaf3854e89642",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0de23005e4b65de00",
            "owner_id": "381406420289",
            "tags": {
              "Name": "terraform_test_vpc"
            }
          }
        }
      ]
    }
  ]
}